deploy/environments/development/web-public/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-public
  labels:
    app: web-public
spec:
  tls:
    - hosts:
        - dev.everbloom.com
      secretName: web-public-dev-tls
  rules:
    - host: dev.everbloom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-public
                port:
                  number: 80
